--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ authors = ["mattiasu96"]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.95.1"
+pylint = "^2.17.3"
+black = "^23.3.0"
+isort = "^5.12.0"
+mypy = "^1.2.0"
+pytest = "^7.3.1"
 
 [tool.poetry.dev-dependencies]
 
