--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ black = "^23.3.0"
 isort = "^5.12.0"
 mypy = "^1.2.0"
 pytest = "^7.3.1"
+uvicorn = "^0.22.0"
+httpx = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 
