--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,13 @@ mypy = "^1.2.0"
 pytest = "^7.3.1"
 uvicorn = "^0.22.0"
 httpx = "^0.24.0"
+pydantic = "^1.10.7"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pylint.'MESSAGES CONTROL']
+extension-pkg-whitelist = "pydantic"
